--- a/app/src/main/res/drawable/ic_arrow_down.xml
+++ b/app/src/main/res/drawable/ic_arrow_down.xml
@@ -1,10 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="22.5dp"
-        android:height="12.5dp"
+        android:width="20dp"
+        android:height="11dp"
         android:viewportHeight="5.0"
         android:viewportWidth="9.0">
     <path
-        android:fillColor="#5F5F5F"
+        android:fillColor="#F18D00"
         android:fillType="evenOdd"
         android:pathData="M8.12,1.196C8.12,1.259 8.096,1.315 8.047,1.363L4.667,4.744C4.618,4.792 4.563,4.816 4.5,4.816C4.437,4.816 4.382,4.792 4.333,4.744L0.953,1.363C0.904,1.315 0.88,1.259 0.88,1.196C0.88,1.134 0.904,1.078 0.953,1.03L1.315,0.667C1.364,0.618 1.419,0.594 1.482,0.594C1.545,0.594 1.601,0.618 1.649,0.667L4.5,3.518L7.351,0.667C7.399,0.618 7.455,0.594 7.518,0.594C7.581,0.594 7.636,0.618 7.685,0.667L8.047,1.03C8.096,1.078 8.12,1.134 8.12,1.196Z"
         android:strokeColor="#00000000"
